hack/netpol/egress-allow-sleep-to-httpbin.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-allow-sleep-to-httpbin
spec:
  podSelector:
    matchLabels:
      app: sleep 
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: httpbin
