hack/netpol/egress-sleep-to-dummyapp.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-allow-sleep-to-httpbin
spec:
  podSelector:
    matchLabels:
      app: sleep 
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: dummy
