hack/netpol/ingress-allow-all-to-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-allow-all-to-all
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
